# ansible-role-tripleo-backup

./: .gitignore  .gitreview  README.md  README.rst  ansible.cfg  groups  hosts  project.config  requirements.txt  setup.cfg  snap.sh
config/general_config/: snap-liberty.yml  snap-mitaka.yml  snap-newton.yml
defaults/: main.yml
files/: example_execution.sh
handlers/: main.yml
playbooks/: backup.yml  restore.yml  sanity.yml  upload.yml
tasks/: backup.yml  jenkins.yml  main.yml  restore.yml  restore_config.yml  sanity.yml  upload.yml
templates/: external.xml  hosts  oooq_pool.xml  overcloud.xml  ssh.config.ansible
tests/: test.yml
vars/: main.yml
