[metadata]
name = tripleo-overcloud-upgrade
summary = tripleo-overcloud-upgrade - A ansible role for backup a ooop deployment
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-backup
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-backup/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-backup/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-backup/meta = meta/*
    usr/local/share/ansible/roles/tripleo-backup/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-backup/templates = templates/*
    usr/local/share/ansible/roles/tripleo-backup/tests = tests/*
    usr/local/share/ansible/roles/tripleo-backup/vars = vars/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
